alter names as show on DDD
